# BioML

./: .gitignore  LICENSE  README.md  ensemble.py  environment.yml  feature_extraction.py  feature_selection.py  generate_model.py  generate_pssm.py  helper.py  model_training.py  outlier.py  predict.py  pyproject.toml  setup.py  threshold.py  utilities.py
BioML/: __init__.py  custom_errors.py  ensemble.py  feature_extraction.py  feature_selection.py  generate_model.py  generate_pssm.py  model_training.py  outlier.py  predict.py  split_methods.py  threshold.py  utilities.py  utils.py
BioML/applications/: suggest.py
BioML/deep/: embeddings.py  finetuning.py  suggest.py  train_config.py  utils.py
BioML/features/: __init__.py  extraction.py  feature_selection.py  generate_pssm.py  methods.py  selection.py
BioML/models/: base.py  classification.py  metrics.py  predict.py  regression.py  save_model.py
BioML/training/: base.py  classification.py  generate_model.py  helper.py  regression.py  save_model.py
BioML/utilities/: custom_errors.py  deep_utils.py  eda.py  helper.py  outlier.py  split_methods.py  training.py  utils.py
POSSUM_Toolkit/: catalytic.xlsx  labels.csv  possum_standalone.pl  sequences.fasta
POSSUM_Toolkit/input/: example.fasta  removed.fasta
POSSUM_Toolkit/input/pssm_files/: 1.pssm  236477.pssm  example_1.pssm  example_2.pssm
POSSUM_Toolkit/output/: example_aac_pssm.csv  example_dp_pssm.csv  example_k_separated_bigrams_pssm.csv  example_pse_pssm.csv  example_pssm_ac.csv  example_pssm_cc.csv  example_smoothed_pssm.csv
POSSUM_Toolkit/src/: possum_ft.py
POSSUM_Toolkit/utils/: removeIllegalSequences.pl  removeShortSequences.pl
data/: Chemical_SMILES.txt  DNA_sequences.txt  RNA_sequences.txt  classification_selected.xlsx  embeddings.csv  esterase_labels.csv  no_illegal.fasta  regression.csv  regression_labels.csv  regression_selected.xlsx  target_in_csv_regression.csv  test_model.hola.pkl  test_model.pkl
examples/: my_optuna_studies.db  result.pssm  test_classification.ipynb  test_cv_methods.ipynb  test_eda.ipynb  test_embeddings.ipynb  test_end_to_end.ipynb  test_feature_selection.ipynb  test_finetuning.ipynb  test_pycaret.ipynb  test_regression.ipynb  test_suggestion.ipynb
tests/: context.py  test.yaml  test_feature_selection.py  test_mmseqs2.py  test_model_training.py  test_outlier.py  test_utils.py
