[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "BioML"
version = "1.0.0"
requires-python = "<3.12"
dependencies = [
  "biopython",
  "openpyxl",
  "pyod",
  "combo",
  "optuna",
  "transformers",
  "optuna-integration",
  "lightning",
  "peft",
  "datasets",
  "pytest",
  "mlflow <=2.16.0",
  "pycaret[analysis,models]",
  "torch"
# you have to download POSUM_toolkit and iFeature from github https://github.com/Superzchen/iFeature.git, they are not packages
]



authors = [
  {name = "Ruite Xiang", email = "ruite.xiang@gmail.com"}
]

description = "BioML is a Python package to generate predictive models for protein data"

license = {text = "MIT License"}
readme = "README.md"
keywords = ["bioprospecting", "bioinformatics", "machine learning", "proteins", 
            "protein engineering"]

classifiers=["Programming Language :: Python :: 3.10",
             "License :: OSI Approved :: MIT License",
             "Operating System :: Unix",
             "Intended Audience :: Science/Research",
             "Natural Language :: English",
             "Topic :: Scientific/Engineering :: Bio-Informatics"]


[project.optional-dependencies]
cluster = ["mmseqs2", 
           "perl-bio-featureio", # Both installed with conda in the bioconda channel it seems that perl-bio-feaureio may download a wrong version of scikit-learn which makes it incompatible with pycaret so install everything with conda then pycaret
           
           ]
features = ["iFeatureOmegaCLI"] # Need to pre-install some dependencies first https://github.com/Superzchen/iFeatureOmega-CLI, 
                                # not all of the dependencies are needed to run iFeatureOmega for feature extraction (only rdkit, biopython and networkx)
                                
gpu = ["bitsandbytes"] # need cudatoolkit

[project.urls]
Repository = "https://github.com/etiur/BioML"
